Add note regarding empty BLP previews

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -177,6 +177,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+                <b>&nbsp;If you are previewing BLPs and see nothing, download it and view it in an external viewer.</b>
                 <div class="modal-body" id="previewModalContent">
                     <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
                 </div>
