--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -346,6 +346,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+                <b>&nbsp;If you are previewing BLPs and see nothing, download it from files page and view it in an external viewer.</b>
                 <div class="modal-body" id="previewModalContent">
                     <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
                 </div>
