--- a/wwwroot/files/keyinfo.html
+++ b/wwwroot/files/keyinfo.html
@@ -101,7 +101,7 @@
                 if (entry.FirstSeen.length == 23)
                     descriptionPadding = "   ";
 
-                output += " " + entry.Lookup + "  " + keyBytes + "  salsa20   " + entry.ID + idPadding + entry.FirstSeen + descriptionPadding + entry.Description + "\n";
+                output += " <a target='_BLANK' href='/files/#search=encrypted%3A" + entry.Lookup + "&page=1&sort=0&desc=asc'>" + entry.Lookup + "</a>  " + keyBytes + "  salsa20   " + entry.ID + idPadding + entry.FirstSeen + descriptionPadding + entry.Description + "\n";
             });
 
             document.getElementById("output").innerHTML = output;
