Update search help

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -155,8 +155,8 @@
                     <!--<kbd>chash:md5</kbd> for filter by contenthash<br>-->
                     <kbd>unnamed</kbd> for files without filenames<br>
                     <!--<kbd>communitynames</kbd> for files with community filenames<br>
-                    <kbd>encrypted</kbd> for encrypted files<br>
-                    <kbd>encrypted:KEY</kbd> for encrypted by key<br>
+                    <kbd>encrypted</kbd> for encrypted files<br>-->
+                    <kbd>encrypted:KEY</kbd> for encrypted by key<br><!--
                     <kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>
                     <kbd>range:start-end</kbd> search within a specific set of FileDataIDs<br>
                     <kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
