--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -91,9 +91,15 @@
             <a href='#' id='multipleFileDLButton' target='_BLANK' class='btn btn-warning btn-sm' style='display: none'>Download selected files (1)</a>
             <a href='#' id='multipleFileAddAll' class='btn btn-info btn-sm' style='display: none'>Add all files on page</a>
             <a href='#' id='multipleFileResetButton' class='btn btn-danger btn-sm' style='display: none'>Reset queue</a>-->
-            <a style='vertical-align: top;' id='analyzeFileButton' class='btn btn-danger btn-sm' onclick="analyzeFiles();" href="#"><i class='fa fa-refresh'></i> Analyze unknown files</a>
-            <a style='vertical-align: top;' id='exportListfileButton' class='btn btn-primary btn-sm' onclick="exportListfile();" href="#"><i class='fa fa-save'></i> Export listfile to exported-listfile.csv</a>
-            <a style='vertical-align: top;' id='exportTACTKeysButton' class='btn btn-secondary btn-sm' onclick="exportTACTKeys();" href="#"><i class='fa fa-save'></i> Export TACTKeys to exported-tactkeys.csv</a>
+            <a  id='analyzeFileButton' class='btn btn-danger btn-sm' onclick="analyzeFiles();" href="#"><i class='fa fa-refresh'></i> Analyze unknown files</a>
+            <div class="btn-group" role="group">
+                <a id='updateListfileButton' class='btn btn-primary btn-sm' onclick="updateListfile();" href="#"><i class='fa fa-refresh'></i> Update listfile</a>
+                <a id='exportListfileButton' class='btn btn-primary btn-sm' onclick="exportListfile();" href="#"><i class='fa fa-save'></i> Export listfile to exported-listfile.csv</a>
+            </div>
+            <div class="btn-group" role="group">
+                <a id='updateTACTKeysButton' class='btn btn-secondary btn-sm' onclick="updateTACTKeys();" href="#"><i class='fa fa-refresh'></i> Update TACTKeys</a>
+                <a id='exportTACTKeysButton' class='btn btn-secondary btn-sm' onclick="exportTACTKeys();" href="#"><i class='fa fa-save'></i> Export TACTKeys to WoW.txt</a>
+            </div>
         </div>
         <div id='files_treeFilter' style='display: none'>
             <input type='text' id='treeFilter' oninput='treeFilterChange(this)'>
@@ -198,16 +204,47 @@
         }
 
         async function exportListfile() {
+            var button = document.getElementById("exportListfileButton");
+            var beforeText = button.innerHTML;
+
+            button.innerHTML = "<i class='fa fa-spin fa-refresh'></i> Exporting, please wait!";
+
             await fetch("/casc/exportListfile");
+            button.innerHTML = beforeText;
         }
 
         async function exportTACTKeys() {
+            var button = document.getElementById("exportTACTKeysButton");
+            var beforeText = button.innerHTML;
+
+            button.innerHTML = "<i class='fa fa-spin fa-refresh'></i> Exporting, please wait!";
+
             await fetch("/casc/exportTACTKeys");
+
+            // Make it last long enough to show something happened, lol
+            await new Promise(resolve => setTimeout(resolve, 100));
+
+            button.innerHTML = beforeText;
+        }
+
+        async function updateListfile() {
+            var button = document.getElementById("updateListfileButton");
+            button.innerHTML = "<i class='fa fa-spin fa-refresh'></i> Updating, please wait!";
+
+            await fetch("/casc/updateListfile");
+            window.location.reload();
+        }
+
+        async function updateTACTKeys() {
+            var button = document.getElementById("updateTACTKeysButton");
+            button.innerHTML = "<i class='fa fa-spin fa-refresh'></i> Updating, please wait!";
+
+            await fetch("/casc/updateTACTKeys");
+            window.location.reload();
         }
 
         async function analyzeFiles() {
             const response = await fetch("/casc/analyzeUnknown");
-            console.log(await response.text());
             window.location.reload();
         }
 
